# filemond

./: CMakeLists.txt  build.sh
src/: sample.cpp
src/filemon/: filemon.cpp
src/filemon/includes/: filemon.h
